css/styles.css
@charset "UTF-8";

:root {
    /* Color pallete: */
    --color-pink: #ff8c94;
    --color-purple: #8593cc;
    --color-blue: #a1e0ff;
    --color-green: #a8e6cf;
    --color-lime: #ddedc0;

    --shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.08);
}

* {
    box-sizing: border-box;
}

body {
    font-family: "Roboto Slab", serif;
    font-size: 16px;
    line-height: 1.5em;
    margin: 0;
    background-color: var(--color-pink);
}

h1 {
    font-size: 4.236rem;
    font-weight: 700;
}

h2 {
    font-size: 2.618rem;
    font-weight: 700;
}

h3 {
    font-size: 1.618rem;
    font-weight: 700;
}

h1,
h2,
h3 {
    line-height: 1em;
    margin: 1rem 0;
}

/* Header */
#page-header {
    background-color: var(--color-green);
    box-shadow: var(--shadow);
    padding: 1rem;
    position: fixed;
    width: 100%;
}

.menu {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
}

.menu-logo {
    cursor: pointer;
    display: inline-flex;
}

.menu-logo img {
    display: inline-block;
    height: 1.5rem;
}

/* Menu */
#menu-btn {
    display: inline-flex;
    cursor: pointer;
}

#menu-itens {
    transition: ease-in-out;
    display: none;
    margin-top: 1rem;
    min-width: 100%;
    flex-direction: column;
    align-items: center;
}

#menu-itens a {
    cursor: pointer;
    padding: 0.5rem;
}

#menu-itens a.active {
    color: white;
    font-weight: 900;
}

#menu-itens a:hover,
#menu-btn:hover {
    color: var(--color-pink);
}

@media screen and (min-width: 992px) {
    #menu-btn {
        display: none;
    }

    #menu-itens {
        display: flex;
        margin-top: 0;
        min-width: 100px;
        flex-direction: row;
        align-items: center;
    }

    #menu-itens a {
        cursor: pointer;
        padding: 0 0.5rem;
    }
}

/* Main Content */
main {
    display: flex;
    flex-direction: column;
    height: 100%;
}

main section.main-sections {
    background-color: var(--color-purple);
    display: flex;
    flex-direction: column;
}

.section-txt {
    padding: 2rem;
    text-align: left;
    align-self: center;
}

.section-txt > span {
    color: white;
    text-decoration: underline;
}

.section-txt h1,
.section-txt h2 {
    color: white;
}

.section-img {
    width: 100%;
}

@media screen and (min-width: 992px) {
    main section.main-sections {
        flex-direction: row;
    }

    main section.main-sections:nth-child(even) {
        flex-direction: row-reverse;
    }

    main section.main-sections:nth-child(odd) .section-txt {
        text-align: right;
    }

    .section-img {
        width: 60%;
        object-fit: cover;
    }
}

main > section.active {
    background-color: var(--color-pink);
}

#back-top {
    position: fixed;
    display: none;
    margin: 0;
    padding: 1rem;
    bottom: 2rem;
    right: 2rem;
}

footer {
    background-color: darkgrey;
    padding: 1rem;
}

